# misc_codes

./: README.md
barcode_generate/: barcode-compose.sh  barcode-generate.grr.sh  barcode-generate.sh  barcode-generate.small.sh
cse214_assembly/misc/: assignment.txt  calc_add.s  calc_sub.s  how_many_bits_on.s  howmany1s.s
cse214_assembly/mshell/: BUILD.txt  Makefile  chmod.s  cp.s  create.s  exit.s  help  help.s  mkdir.s  mv.s  print_long.s  print_tab.s  rm.s  strcpy.s  touch.s
cse_buet_00/cse214_assembly/misc/: array_add_sub_mul.s  binsearch.s  strcat.s  strcmp.s  strcpy.s  strlen.s  strstr.s
cse_buet_00/cse214_assembly/mshell/: AUTHORS  README  atoi.s  cd.s  find.s  getcwd.s  ls.s  parser.s  print_nl.s  print_str.s  rmdir.s  shell.s  statfs.s  strcat.s  strcmp.s  strlen.s  strrev.s
cse_buet_00/cse402_computer_networks/2_datalink/protocol6-w4/: Makefile  crc16.h  input.2  protocol6.c  protocol6.h  readme  readme.txt  support.c  support.h  test.c  timertest.c  timertest1.c  view-progress.sh
cse_buet_00/cse402_computer_networks/3_network/ping/ping-gtk/frontend/src/: Makefile  Makefile.am  Makefile.am.default  Makefile.am~  Makefile.in  callbacks.c  callbacks.c~  callbacks.h  frontend  interface.c.bak  main.c  main.c~  myping4-gtk.c  myping4-gtk.h  myping4.c  myping4.h  ping-gtk.c~  ping.h  ping.h~  theme.tar.bz2
cse_buet_00/cse408_interfacing/interfacing/: Makefile  final.odt  interfacing.txt  project.c  project.debug  project.noaudio
cse_buet_00/cse408_interfacing/interfacing/gtk-project/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  gtk-project  interface.c  interface.c.bak  main.c
outsourcing/get-a-coder/: Makefile  TechnoVilla_feedback.htm  cost.txt
outsourcing/local-projects/CMD/: Kernel-HOWTO-6.html  cmd.var.log.messages  d605173502133.htm  d605173502133p.htm  payment.txt  product.php.html
outsourcing/local-projects/barcode/: barcode.txt~  interfacing.txt  kernel-src-list.txt  latest-requirements.txt~
outsourcing/local-projects/barcode-attendance/: Makefile~  interfacing.txt~  latest-requirements.txt  payment.txt  project-map.txt  run.sh  sample.c~  type.txt
outsourcing/local-projects/barcode-attendance/licensing/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.c.bak  license  licensing  myfuncs.c  myfuncs.c~
outsourcing/local-projects/barcode/autotools/: Makefile.am  configure.in
outsourcing/local-projects/barcode/manage-password/src/: Makefile.am  Makefile.am~  callbacks.h~  interface.c.bak  main.c  mysdb.c~  mysdb.h
(+463 files in other folders)
